// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabMenuItem should render correctly 1`] = `
.c0 {
  position: relative;
  -webkit-flex: 1 auto;
  -ms-flex: 1 auto;
  flex: 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1rem;
  box-sizing: border-box;
  cursor: pointer;
}

.c1 {
  position: absolute;
  bottom: -2px;
  left: 0;
  width: 100%;
  height: 0.325rem;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  background-color: #FFCA00;
  opacity: 0;
}

@media (max-width:48rem) {
  .c0 {
    -webkit-order: 1;
    -ms-flex-order: 1;
    order: 1;
  }

  .c0.hidden {
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
  }
}

@media (min-width:48rem) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-order: 1;
    -ms-flex-order: 1;
    order: 1;
  }

  .c0:hover :last-child {
    opacity: 1;
  }
}

<TabMenuItem
  selected={false}
>
  <styled.div
    className="undefined disabled"
  >
    <div
      className="undefined disabled c0"
    >
      MyTabMenuItem
      <styled.div
        selected={false}
      >
        <div
          className="c1"
          selected={false}
        />
      </styled.div>
    </div>
  </styled.div>
</TabMenuItem>
`;

exports[`TabMenuItem should render correctly when selected 1`] = `
.c0 {
  position: relative;
  -webkit-flex: 1 auto;
  -ms-flex: 1 auto;
  flex: 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1rem;
  box-sizing: border-box;
  cursor: pointer;
}

.c1 {
  position: absolute;
  bottom: -2px;
  left: 0;
  width: 100%;
  height: 0.325rem;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  background-color: #FFCA00;
  opacity: 1;
}

@media (max-width:48rem) {
  .c0 {
    -webkit-order: 1;
    -ms-flex-order: 1;
    order: 1;
  }

  .c0.hidden {
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
  }
}

@media (min-width:48rem) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-order: 1;
    -ms-flex-order: 1;
    order: 1;
  }

  .c0:hover :last-child {
    opacity: 1;
  }
}

<TabMenuItem
  selected={true}
>
  <styled.div>
    <div
      className="c0"
    >
      MyTabMenuItem
      <styled.div
        selected={true}
      >
        <div
          className="c1"
          selected={true}
        />
      </styled.div>
    </div>
  </styled.div>
</TabMenuItem>
`;
